# autonomous-drone-safety-architecture

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  index.html  poster.html  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: LATENCY_BUDGET.md
experiments/: bench_wcet.py  exp_battery_validation.py  exp_consensus_fault.py  exp_hallucination_1000.py  exp_lie_derivatives.py  exp_observability_gramian.py  exp_wcet_evt.py  post_training_pipeline.py
experiments/results/: battery_validation.json  consensus_fault.json  hallucination_1000.json  lie_derivatives.json  observability_gramian.json  ppo_policy.onnx  wcet_evt.json
problem/: problem.txt
services/: consensus_node.py
sim/: domain_rand.py  quadrotor_rl.py
src/control/: __init__.py  hocbf.cpp
src/estimation/: __init__.py  ekf_gating.py
src/perception/: __init__.py  vla_bridge.py
src/rt/: safety_filter.c
src/utils/: __init__.py  shm_bridge.h  shm_bridge.py
tests/: __init__.py  conftest.py  test_hocbf.py
